--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
-    "postinstall": "husky install &&  yarn install"
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
@@ -40,10 +39,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1"
